--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  dio:
   provider:
+  shared_preferences:
+  flutter_native_splash:
 dev_dependencies:
   flutter_test:
     sdk: flutter
